@@ -31,6 +31,7 @@ MPlayer
     * Dramatic speedup of scanning font description files
     * Playback improvements for cue sheet playlists
     * Implementation of audio playback utilizing ReplayGain data
+    * New symbol character 'g' and new dynamic label variable $g
 
 
   1.3.0: "worksforme" February 16, 2016
